# ledgerloop

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
corpus/: acme-invoice-1042.txt  acme-msa-amendment-1.txt  acme-msa.txt
docs/: anatomy-of-a-run.md
migrations/: 0001_engine.sql  0002_kafka_outbox.sql  0003_graph.sql
scripts/: demo.tape  demo_recovery.sh  migrate.py  rebuild_queue.py  seed_edgar.py
src/ledgerloop/api/: app.py
src/ledgerloop/domain/: invoices.py
src/ledgerloop/domain/contracts/: extraction.py  graph.py  risk.py  workflow.py
src/ledgerloop/engine/: db.py  events.py  queue.py  replay.py  scheduler.py  worker.py
src/ledgerloop/kafka/: egress.py  ingress.py
src/ledgerloop/runtime/: agent.py  llm.py  tools.py
tests/: chaos_workflow.py  conftest.py  demo_workflow.py  test_api.py  test_chaos.py  test_contracts.py  test_engine.py  test_invoices.py  test_kafka.py  test_recovery_demo.py  test_replay_property.py  test_runtime.py  test_zombie.py
