[project]
name = "ledgerloop"
version = "0.1.0"
description = "Durable execution engine for AI agent workflows, built on Postgres event sourcing"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "anthropic>=0.34",
    "aiokafka>=0.11",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ledgerloop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
